--- a/src/styles/UserCRUD.css
+++ b/src/styles/UserCRUD.css
@@ -51,11 +51,10 @@
  }
 
  /*
-echo "# frontend_backend" >> README.md
+echo "# fb" >> README.md
 git init
 git add README.md
 git commit -m "first commit"
 git branch -M main
-git remote add origin https://github.com/PreethiS2004/frontend_backend.git
+git remote add origin https://github.com/PreethiS2004/fb.git
 git push -u origin main
- */
