--- a/src/styles/UserCRUD.css
+++ b/src/styles/UserCRUD.css
@@ -1,10 +1,9 @@
 .recipe-form {
-    background: url('../../public/bg_image.jpeg') no-repeat center center fixed;
-    background-size: cover;
     height: 90vh;
     width:100%;
     margin-top: 0px;
     position: relative;
+    margin-top: 10%;
   }
   .recipe-form::before {
     content: "";
@@ -13,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(99, 99, 99, 0.623); /* Adjust the alpha value to change the overlay opacity */
+    background-color: white; /* Adjust the alpha value to change the overlay opacity */
   }
 
      
@@ -49,12 +48,3 @@
  .form-control{
   height: 35px ;
  }
-
- /*
-echo "# fb" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/PreethiS2004/fb.git
-git push -u origin main
