--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -30,7 +30,24 @@
    
   }
   
+  .contact-us-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60vh; /* Adjust this value based on your needs */
+  }
+  
+  .contact-info {
+    margin-top: 15%;
+    display: flex;
+    flex-direction: row;
+    gap: 100px; /* Adjust the gap between icons and text */
+  }
+  
 
+  .facebook{
+    margin-left: 150px;
+  }
  
-  
-  
+
