--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -8,7 +8,7 @@
     
   }
   .home-bg{
-    background: url('../../public/bg_image.jpeg') no-repeat center center fixed;
+    background: url('../../public/bg_image.jpg') no-repeat center center fixed;
     background-size: cover;
     height: 90vh;
     width:100%;
@@ -22,12 +22,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(99, 99, 99, 0.623); /* Adjust the alpha value to change the overlay opacity */
+    background-color: rgba(54, 54, 54, 0.623); /* Adjust the alpha value to change the overlay opacity */
+
   }
  .hero__content {
     text-align: center; /* Adjust as needed */
     color: #fff; /* Text color */
-   
+     position: relative;
+     left: 50%;
   }
   
   .contact-us-container {
