--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,6 @@
 .footer {
     padding: 50px 0px;
-    background: rgb(251, 243, 243);
+    background:white;
     display: flex;
     text-align: start;
     justify-content: center;
